# cvxpylayers

./: pyproject.toml
cvxpylayers/: utils.py
cvxpylayers/jax/: cvxpylayer.py
cvxpylayers/torch/: cvxpylayer.py
